kubernetes/apps/infrastructure/keycloak/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    istio.io/dataplane-mode: ambient
